objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABN__c</fullName>
        <description>Australian Business Number</description>
        <inlineHelpText>Australian Business Number</inlineHelpText>
        <label>ABN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACN__c</fullName>
        <label>ACN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_Applicant__c</fullName>
        <formula>12-MONTH(PersonBirthdate)+((YEAR(TODAY())-YEAR(PersonBirthdate))*12)+MONTH(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Applicant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_ABN__c</fullName>
        <label>ABN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ACL__c</fullName>
        <label>ACL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ACN__c</fullName>
        <label>ACN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ACR__c</fullName>
        <label>ACR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Achieved_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Achieved MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Achieved_QTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Achieved QTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Achieved_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Achieved YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Achieved__c</fullName>
        <label>Achieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Aggregator_Introducer_Relation_Date__c</fullName>
        <label>Aggregator Introducer Relation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Aggregator_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aggregator Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Business_Type__c</fullName>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietary Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual/ Sole Trader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorporated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_CMS_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>CMS Unique ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Channel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Deactivation_Reason__c</fullName>
        <label>Deactivation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Blacklisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breach of Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss of ACL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss of LMCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss of Brand/ Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other- No adverse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Drive_file_path__c</fullName>
        <label>Drive file path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Entity_Activation_Date__c</fullName>
        <label>Entity Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Imported_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Introducer_ID__c</fullName>
        <label>Introducer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Introducer_status__c</fullName>
        <label>Entity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Is_PAF_BDM__c</fullName>
        <formula>CRM_PAF_BDM__r.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is PAF BDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Key_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Last_Visited_Date__c</fullName>
        <label>Last Visited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Last_Visited_Indicator__c</fullName>
        <formula>IF((TODAY() - CRM_Last_Visited_Date__c ) &lt; 15 , 
IMAGE(&apos;/resource/1471511556000/GreenIndicator&apos;,&apos;green&apos;,30,30), 
IF((TODAY() - CRM_Last_Visited_Date__c ) &gt;= 15 &amp;&amp; (TODAY() - CRM_Last_Visited_Date__c ) &lt;= 45 , 
IMAGE(&apos;/resource/1471511635000/YellowIndecator&apos;,&apos;yellow&apos;,30,30), 
IMAGE(&apos;/resource/1471511583000/RedIndicator&apos;,&apos;red&apos;,30,30) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Visited Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Legal_name__c</fullName>
        <label>Legal name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Marketing_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Opt in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Monthly_VBI_Target__c</fullName>
        <label>Monthly VBI Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mortgage_BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mortgage BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MortgageAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_AFSL__c</fullName>
        <label>AFSL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_ASIC__c</fullName>
        <label>ASIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Accreditation_Date_Time__c</fullName>
        <label>Accreditation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Accreditation_Id__c</fullName>
        <label>Accreditation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Accreditation_Status_Formula__c</fullName>
        <formula>IF(ISPICKVAL(CRM_Mtg_Accreditation_Status__c,&apos;Active&apos;),
&apos;1&apos;,
IF(ISPICKVAL(CRM_Mtg_Accreditation_Status__c,&apos;Inactive&apos;),
&apos;0&apos;,
&apos;&apos;))</formula>
        <label>Accreditation Status Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Accreditation_Status__c</fullName>
        <label>Accreditation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospective</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Proceeding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Aggregator_Conversion_Rate__c</fullName>
        <formula>IF(CRM_Mtg_Apps_Last_Quarter__c &gt; 0,
CRM_Mtg_Setts_QTD__c/CRM_Mtg_Apps_Last_Quarter__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aggregator Conversion Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Aggregator_State__c</fullName>
        <label>Aggregator State</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_Last_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Apps Last Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_Last_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total no of applications submitted in the last 12 months, calculated at the beginning of each month.</inlineHelpText>
        <label># Apps Last 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_MTD_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total value of applications submitted this month to date, calculated daily</inlineHelpText>
        <label>$ Apps MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total no of applications submitted this month to date, calculated daily</inlineHelpText>
        <label># Apps MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_QTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Apps QTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_YTD_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total value of applications submitted this year to date, calculated daily</inlineHelpText>
        <label>$ Apps YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total no of applications submitted this year to date, calculated daily</inlineHelpText>
        <label># Apps YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mortgage BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mortgage_BDM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Change_Status_To__c</fullName>
        <inlineHelpText>This will activate/deactivate profile in other systems. Are you sure you want to proceed?</inlineHelpText>
        <label>Change Status To</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Data_Push_Date_Time__c</fullName>
        <label>Last Data Push Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Data_Sync_Date_Time__c</fullName>
        <label>Last Successful Data Sync Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Data_Sync_Errors__c</fullName>
        <label>Data Sync Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Data_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Deactivation_DateTime__c</fullName>
        <label>Deactivation DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Email__c</fullName>
        <description>Email of Mortgages Aggregator or WL Partner</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_External_Dispute_Resolution__c</fullName>
        <label>External Dispute Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_FBAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FBAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Is_Data_Sync_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Data Sync Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Is_Mortgage_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mortgage Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Is_Mortgage_BDM__c</fullName>
        <formula>CRM_Mtg_BDM__r.Id = $User.Id</formula>
        <label>Is Mortgage BDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_MFAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MFAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Minutes_Email_Header_Image_Id__c</fullName>
        <label>Minutes Email Header Image Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Minutes_Email_Header_Image_Url__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;servlet/servlet.ImageServer?id=&apos; &amp; 
IF(CRM_Mtg_Minutes_Email_Header_Image_Id__c != &apos;&apos;,
CRM_Mtg_Minutes_Email_Header_Image_Id__c,
$Label.CRM_Mtg_Minutes_Email_Header_Default_Image_Id)
&amp; &apos;&amp;oid=&apos; &amp; $Organization.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes Email Header Image Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Mortgage_Manager__c</fullName>
        <formula>IF(ISPICKVAL(CRM_Mtg_Channel__c,&apos;White Label&apos;),
&apos;1&apos;,
IF(ISPICKVAL(CRM_Mtg_Channel__c,&apos;Retail&apos;),
&apos;0&apos;,
&apos;&apos;))</formula>
        <label>Mortgage Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Near_Prime_Trail__c</fullName>
        <label>Near Prime Trail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Near_Prime_Upfront__c</fullName>
        <label>Near Prime Upfront</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Nextgen_Role_Code__c</fullName>
        <label>Nextgen Role Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_PI_Amount__c</fullName>
        <label>PI Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_PI_Expiry_Date__c</fullName>
        <label>PI Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Please_Note1__c</fullName>
        <label>*Please Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Please_Note__c</fullName>
        <label>*Please Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_Trail__c</fullName>
        <label>Prime Trail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_Upfront__c</fullName>
        <label>Prime Upfront</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_Last_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Setts Last Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_Last_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total no of settlements in the last 12 months, calculated at the beginning of each month.</inlineHelpText>
        <label># Setts Last 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_MTD_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total value of settlements this month to date, calculated daily</inlineHelpText>
        <label>$ Setts MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total no of settlements this month to date, calculated daily</inlineHelpText>
        <label># Setts MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_QTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Setts QTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_YTD_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total value of settlements this year to date, calculated daily</inlineHelpText>
        <label>$ Setts YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total no of settlements this year to date, calculated daily</inlineHelpText>
        <label># Setts YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Specialist_Trail__c</fullName>
        <label>Specialist Trail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Specialist_Upfront__c</fullName>
        <label>Specialist Upfront</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Unique_Id_Formula__c</fullName>
        <formula>TEXT(CRM_Mtg_Unique_Id__c)</formula>
        <label>Unique Id Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id (ARM Id)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_Next_follow_up_date__c</fullName>
        <label>Follow-up date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_No_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Other_commercial_asset__c</fullName>
        <label>Additional Assets Financed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_PAF_BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PAF BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_PI_Insurance_Expiry_Date__c</fullName>
        <label>PI Insurance Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Pepper_Assets_Financed__c</fullName>
        <description>VP 071216: Changed from field name CRM_Type_of_commercial_assets_financed</description>
        <label>Pepper Assets Financed</label>
        <picklist>
            <picklistValues>
                <fullName>Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bikes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business equipment</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRM_Performance_QTD__c</fullName>
        <formula>IF(AND( NOT( ISNULL( CRM_Achieved_QTD__c )),NOT( ISNULL( CRM_Target_QTD__c)), CRM_Achieved_QTD__c != 0, CRM_Target_QTD__c!= 0 ), CRM_Achieved_QTD__c/ CRM_Target_QTD__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance QTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Predominant_asset_class__c</fullName>
        <label>Predominant Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Prioritisation_grid__c</fullName>
        <label>Prioritisation Grid</label>
        <picklist>
            <picklistValues>
                <fullName>Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Target_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Target This Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_QTD__c</fullName>
        <label>Target This Quarter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Target This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Trading_Name__c</fullName>
        <label>Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Variance_MTD__c</fullName>
        <formula>IF(AND( NOT( ISNULL(CRM_Achieved_MTD__c )),NOT( ISNULL(CRM_Target_MTD__c)), CRM_Achieved_MTD__c != 0,CRM_Target_MTD__c != 0 ),CRM_Achieved_MTD__c / CRM_Target_MTD__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Variance_YTD__c</fullName>
        <formula>IF(AND( NOT( ISNULL( CRM_Achieved_YTD__c )),NOT( ISNULL( CRM_Target_YTD__c)), CRM_Achieved_YTD__c != 0, CRM_Target_YTD__c!= 0 ), CRM_Achieved_YTD__c/ CRM_Target_YTD__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CaptureMethod__c</fullName>
        <label>CaptureMethod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collections_Email__c</fullName>
        <label>Collections Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <label>Communication Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Us__c</fullName>
        <label>Contact Us</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Application_Id__c</fullName>
        <label>Current Application Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <label>Customer Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Resolutions_Team_No__c</fullName>
        <label>Customer Resolutions Team No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Death__c</fullName>
        <label>Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_PL_Commission_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default PL Commission Plan</label>
        <referenceTo>loan__Commission_Plan__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dependants__c</fullName>
        <label>Dependants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next__c</fullName>
        <formula>&quot;SFAccount:&quot;&amp;Id&amp;&quot;;SFContact:&quot;&amp; Contact__c &amp;&quot;;DDPId:a7R28000000PDYG;Deploy:a7P28000000PCf3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drawloop_Next</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executor_Third_Party_Contact_Details__c</fullName>
        <label>Executor Third Party Contact Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FaceMatchScore__c</fullName>
        <label>FaceMatchScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_OTP_Generation_Time__c</fullName>
        <label>First OTP Generation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transgender</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Provided_Score__c</fullName>
        <formula>IF(ISBLANK(PersonHomePhone), 0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone Provided Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Account_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Account Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Portal_User_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Portal User Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jumio_Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jumio_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jumio_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jumio_Id_Number__c</fullName>
        <label>Id Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jumio_Id_Type__c</fullName>
        <label>Id Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jumio_Issuing_Country__c</fullName>
        <label>Issuing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>